# CS619-Final-Year-Project

./: README.md  app.py  pyproject.toml  requirements.txt
assets/: app.css
data/: medicine_dataset.csv
database/: medicine_recommender.sqlite  saved_profile.json  schema.sql
docs/: dataset_notes.md  requirements_traceability.md  test_cases.md
models/: disease_model.joblib  model_metrics.json
scripts/: generate_professional_dataset.py  initialize_database.py  train_models.py
src/: __init__.py  config.py  data_access.py  knowledge_base.py  modeling.py  preprocessing.py  recommender.py  safety.py
tests/: test_feedback_penalties.py  test_recommender.py
ui/: cached_data.py  components.py  constants.py  export.py  formatting.py  profile_store.py  startup.py  styles.py  validation.py
ui/tabs/: clinical_data.py  history.py  lookup.py  model_performance.py  recommendation.py  requirements.py
